# Grounded

./: .gitattributes  .gitignore  .vercelignore  .viteignore  AI_MODELS_EXPLAINED.md  AI_MODELS_SETUP.md  ANDROID_BUILD_FIX.md  App.tsx  BUILD_INSTALLERS.md  CHANGELOG.md  CODESCENE_CODE_REVIEW.md  CODESCENE_IMPLEMENTATION_PLAN.md  CODE_QUALITY_FIXES.md  CODE_REVIEW_ISSUES.md  COMPREHENSIVE_CODE_REVIEW.md  DATABASE_ADAPTER_REFACTOR_COMPLETE.md  DATABASE_CONSOLIDATION_COMPLETE.md  DISTRIBUTION_README.md  GITHUB_VERCEL_DEPLOYMENT.md  HIPAA_IMPLEMENTATION_COMPLETE.md  INSTALLATION_GUIDE.md  MOBILE_PACKAGE_GUIDE.md  MODELS_IN_PACKAGE.md  MODEL_DOWNLOAD_SOURCES.md  NATIVE_INSTALLER_GUIDE.md  ON_DEVICE_AI_FIX.md  PACKAGE_GUIDE.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_PROGRESS_SUMMARY.md  PHASE3_ACHIEVEMENTS.md  PHASE3_COMPLETE.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_FINAL_PROGRESS.md  PHASE3_FINAL_SUMMARY.md  PHASE3_PROGRESS.md  PHASE3_STATUS.md  PREREQUISITES.md  PRIVACY_FIRST_GUARANTEE.md  PWA_DEPLOYMENT.md  PWA_HEADERS_FIX.md  (+33 more)
.git-rewrite/: backup-refs  commit  index  message  parse  revs
Grounded-Install/: INSTALL.html  README.txt  START.bat  START.sh  USAGE_GUIDE.md  launcher.js  package.json  start.bat  start.sh
components/: AIResponseBubble.tsx  BottomNavigation.tsx  Dashboard.tsx  DatabaseMigrationModal.tsx  DatabaseViewer.tsx  DebugLog.tsx  EmailSchedule.tsx  EmotionPicker.tsx  EmotionSelector.tsx  EncourageSection.tsx  ErrorBoundary.tsx  FeedbackButton.tsx  Login.tsx  (+21 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+329 files in other folders)
